style: Add container-fluid to support templates

--- a/support/templates/support/contact.html
+++ b/support/templates/support/contact.html
@@ -13,28 +13,31 @@ Contact Us
 <main>
     <!-- Contact Form -->
     <section class="margin-top mx-3">
-        <h1 class="liner upper">Contact Form&nbsp;</h1>
-        <p class="px-sm-5 px-2 py-3 ms-sm-4 ms-0">We're always here to help! If you have any questions or concerns,
-            please don't hesitate to contact us using the form below. Our dedicated support team will get back to you as
-            soon as possible.</p>
-        <div class="d-flex flex-column flex-md-row justify-content-around mt-md-3">
-            <div class="d-flex flex-row support-container p-lg-5 p-md-4 p-3 mb-4">
-                <form method="POST" class="w-100">
-                    {% csrf_token %}
-                    <fieldset class="rounded mb-4 d-flex flex-column align-items-center">
-                        <div class="d-flex w-100 flex-column flex-sm-row">
-                            <div class="margin-end flex-grow-1">
-                                {{ form.name|as_crispy_field }}
-                                {{ form.email|as_crispy_field }}
+        <div class="container-fluid container-lg g-0 g-md-1">
+            <h1 class="liner upper">Contact Form&nbsp;</h1>
+            <p class="ms-0">We're always here to help! If you have any questions or concerns,
+                please don't hesitate to contact us using the form below. Our dedicated support team will get back to
+                you as
+                soon as possible.</p>
+            <div class="d-flex flex-column flex-md-row justify-content-around mt-md-3">
+                <div class="d-flex flex-row support-container p-lg-5 p-md-4 p-3 mb-4">
+                    <form method="POST" class="w-100">
+                        {% csrf_token %}
+                        <fieldset class="rounded mb-4 d-flex flex-column align-items-center">
+                            <div class="d-flex w-100 flex-column flex-sm-row">
+                                <div class="margin-end flex-grow-1">
+                                    {{ form.name|as_crispy_field }}
+                                    {{ form.email|as_crispy_field }}
+                                </div>
+                                <div class="flex-grow-1">
+                                    {{ form.subject|as_crispy_field }}
+                                    {{ form.message|as_crispy_field }}
+                                </div>
                             </div>
-                            <div class="flex-grow-1">
-                                {{ form.subject|as_crispy_field }}
-                                {{ form.message|as_crispy_field }}
-                            </div>
-                        </div>
-                    </fieldset>
-                    <button class="btn btn-cta text-white" type="submit">Send Message</button>
-                </form>
+                        </fieldset>
+                        <button class="btn btn-cta text-white" type="submit">Send Message</button>
+                    </form>
+                </div>
             </div>
         </div>
     </section>
