--- a/support/templates/support/tcs.html
+++ b/support/templates/support/tcs.html
@@ -13,35 +13,47 @@ Terms and Conditions
 <main>
     <!-- Terms and Conditions -->
     <section class="margin-top mx-3">
-        <h1 class="liner upper">Terms and Conditions&nbsp;</h1>
-        <div class="d-flex flex-column flex-md-row justify-content-around mt-md-3">
-            <div class="support-container p-lg-5 p-md-4 p-3 mb-4">
-                <h2>Terms and Conditions for Bike World</h2>
-                <p><strong>Pricing: </strong>All prices listed on Bike World are in EURO and are subject to change
-                    without notice.</p>
-                <p><strong>Payment: </strong>We accept all major credit cards. Payment must be received in full before
-                    we
-                    can ship your order.</p>
-                <p><strong>Shipping: </strong>We offer free standard shipping on all bikes world wide.</p>
-                <p><strong>Returns: </strong>Our return policy allows you to return a bike within 30 days from the date
-                    of
-                    purchase for a full refund. Please see our Return Policy for more information.</p>
-                <p><strong>Warranty: </strong>All bikes sold by Bike World come with a limited warranty against defects
-                    in materials and workmanship.</p>
-                <p><strong>Product Descriptions: </strong>We strive to provide accurate product descriptions and images
-                    on our website. However, we cannot guarantee that all descriptions and images are error-free. If you
-                    have any questions or concerns about a product, please contact us before making a purchase.</p>
-                <p><strong>Limitation of Liability: </strong>In no event shall Bike World or its affiliates be liable
-                    for
-                    any direct, indirect, special, incidental or consequential damages arising out of or in connection
-                    with your use of our website or products. This includes, but is not limited to, lost profits, loss
-                    of data or loss of use.</p>
-                <p><strong>Modification: </strong>We reserve the right to modify these Terms and Conditions at any time
-                    without notice. Please review these Terms and Conditions regularly to ensure that you are aware of
-                    any changes.</p>
-                <p>If you have any questions or concerns about our TCs, please <a href="{% url 'contact' %}"
-                        class="text-orange">contact us</a>
-                    and we will be happy to assist you.</p>
+        <div class="container-fluid container-lg g-0 g-md-1">
+            <h1 class="liner upper">Terms and Conditions&nbsp;</h1>
+            <div class="d-flex flex-column flex-md-row justify-content-around mt-md-3">
+                <div class="support-container p-lg-5 p-md-4 p-3 mb-4">
+                    <h2>Terms and Conditions for Bike World</h2>
+                    <p><strong>Pricing: </strong>All prices listed on Bike World are in EURO and are subject to change
+                        without notice.</p>
+                    <p><strong>Payment: </strong>We accept all major credit cards. Payment must be received in full
+                        before
+                        we
+                        can ship your order.</p>
+                    <p><strong>Shipping: </strong>We offer free standard shipping on all bikes world wide.</p>
+                    <p><strong>Returns: </strong>Our return policy allows you to return a bike within 30 days from the
+                        date
+                        of
+                        purchase for a full refund. Please see our Return Policy for more information.</p>
+                    <p><strong>Warranty: </strong>All bikes sold by Bike World come with a limited warranty against
+                        defects
+                        in materials and workmanship.</p>
+                    <p><strong>Product Descriptions: </strong>We strive to provide accurate product descriptions and
+                        images
+                        on our website. However, we cannot guarantee that all descriptions and images are error-free. If
+                        you
+                        have any questions or concerns about a product, please contact us before making a purchase.</p>
+                    <p><strong>Limitation of Liability: </strong>In no event shall Bike World or its affiliates be
+                        liable
+                        for
+                        any direct, indirect, special, incidental or consequential damages arising out of or in
+                        connection
+                        with your use of our website or products. This includes, but is not limited to, lost profits,
+                        loss
+                        of data or loss of use.</p>
+                    <p><strong>Modification: </strong>We reserve the right to modify these Terms and Conditions at any
+                        time
+                        without notice. Please review these Terms and Conditions regularly to ensure that you are aware
+                        of
+                        any changes.</p>
+                    <p>If you have any questions or concerns about our TCs, please <a href="{% url 'contact' %}"
+                            class="text-orange">contact us</a>
+                        and we will be happy to assist you.</p>
+                </div>
             </div>
         </div>
     </section>
