--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -17,7 +17,7 @@ Shopping Bag
 <main>
     <!-- Shopping Bag -->
     <div class="margin-top shopping-cart mx-3">
-        <h1 class="liner upper">Shopping Bag</h1>
+        <h1 class="liner upper">Shopping Bag&nbsp;</h1>
         <button type="submit" class="btn btn-shop-now bg-orange btn-shop-lg my-3 d-md-none">
             Place Your Order!
         </button>
