--- a/support/templates/support/faq.html
+++ b/support/templates/support/faq.html
@@ -15,17 +15,12 @@ FAQs
     <section class="margin-top mx-3">
         <div class="container-fluid container-lg g-0 g-md-1">
             <h1 class="liner upper">FAQs&nbsp;</h1>
-            <p class="ms-0">Welcome to Bike World! We're thrilled that you're interested in shopping
-                with
-                us for
-                all your mountain biking needs. To help make your shopping experience as smooth and enjoyable as
-                possible,
-                we've put together a list of frequently asked questions. Whether you have questions about placing an
-                order,
-                payment options, returns, or our products, we've got you covered. If you don't see the answer to your
-                question here, please don't hesitate to reach out to our customer service team for assistance. Thank you
-                for
-                choosing Bike World, and happy shopping!</p>
+            <p class="ms-0">Welcome to Bike World the greates mountain bike shop! We're thrilled that you're interested
+                in shopping with us for all your mountain biking needs. To help make your shopping experience as smooth
+                and enjoyable as possible, we've put together a list of frequently asked questions. Whether you have
+                questions about placing an order, payment options, returns, or our mountain bikes, we've got you
+                covered. If you don't see the answer to your question here, please don't hesitate to reach out to our
+                customer service team for assistance. Thank you for choosing Bike World, and happy shopping!</p>
             <div class="d-flex flex-column flex-md-row justify-content-around mt-md-3">
                 <div class="d-flex flex-row support-container p-lg-5 p-md-4 p-3 mb-4">
                     <!-- FAQs Accordion-->
@@ -43,8 +38,7 @@ FAQs
                                 <div class="accordion-body">
                                     <p><strong>How do I place an order on Bike World?</strong></p>
                                     <p>A: To place an order on Bike World, simply add the products you wish to purchase
-                                        to
-                                        your shopping bag and proceed to checkout. You'll be prompted to enter your
+                                        to your shopping bag and proceed to checkout. You'll be prompted to enter your
                                         shipping and payment information to complete your order.</p>
                                     <p><strong>Can I change or cancel my order after it has been placed?</strong></p>
                                     <p>A: Unfortunately, once an order has been placed, we are unable to make any
@@ -118,21 +112,20 @@ FAQs
                                 <button class="accordion-button collapsed rounded-0" type="button"
                                     data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false"
                                     aria-controls="collapseFour">
-                                    Products:
+                                    Mountain Bikes:
                                 </button>
                             </h2>
                             <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
                                 data-bs-parent="#accordionDetail">
                                 <div class="accordion-body">
                                     <p><strong>What types of mountain bikes do you offer?</strong></p>
-                                    <p>A: We offer a variety of mountain bikes, including hardtail and full suspension
-                                        mountain bikes.</p>
-                                    <p><strong>Are your products new or used?</strong></p>
+                                    <p>A: We offer a variety of mountain bikes, including hardtail mountain bikes and
+                                        full suspension mountain bikes.</p>
+                                    <p><strong>Are your mountain bikes new or used?</strong></p>
                                     <p>A: All of our products are brand new and come with a manufacturer's warranty.</p>
                                     <p><strong>Do you offer any warranties on your mountain bikes?</strong></p>
                                     <p>A: Yes, all of our products come with a manufacturer's warranty. Please refer to
-                                        the
-                                        product page</p>
+                                        the product page</p>
                                 </div>
                             </div>
                         </div>
