refactor: change line break in contact us template

--- a/support/templates/support/contact.html
+++ b/support/templates/support/contact.html
@@ -17,8 +17,7 @@ Contact Us
             <h1 class="liner upper">Contact Form&nbsp;</h1>
             <p class="ms-0">We're always here to help! If you have any questions or concerns,
                 please don't hesitate to contact us using the form below. Our dedicated support team will get back to
-                you as
-                soon as possible.</p>
+                you as soon as possible.</p>
             <div class="d-flex flex-column flex-md-row justify-content-around mt-md-3">
                 <div class="d-flex flex-row support-container p-lg-5 p-md-4 p-3 mb-4">
                     <form method="POST" class="w-100">
@@ -35,7 +34,7 @@ Contact Us
                                 </div>
                             </div>
                         </fieldset>
-                        <button class="btn btn-cta text-white" type="submit">Send Message</button>
+                        <button class="btn btn-cta text-white upper" type="submit">Send Message</button>
                     </form>
                 </div>
             </div>
