style: Add upper class for uppercase to cta buttons for add/edit product

--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -24,7 +24,7 @@ Update a product
                     <!-- Product Form Fields-->
                     {% include 'products/components/add_edit_product_formfields.html' %}
                     <div class="text-right">
-                        <button class="btn btn-cta text-white" type="submit">Update Product</button>
+                        <button class="btn btn-cta text-white upper" type="submit">Update Product</button>
                         <a class="btn btn-secondary rounded-0 mt-3" href="{% url 'products' %}">Cancel</a>
                     </div>
                 </form>
