--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -23,7 +23,7 @@ Add a new product
                     <!-- Product Form Fields-->
                     {% include 'products/components/add_edit_product_formfields.html' %}
                     <div class="text-right">
-                        <button class="btn btn-cta text-white" type="submit">Add Product</button>
+                        <button class="btn btn-cta text-white upper" type="submit">Add Product</button>
                         <a class="btn btn-secondary rounded-0 mt-3" href="{% url 'products' %}">Cancel</a>
                     </div>
                 </form>
