--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -66,7 +66,10 @@ Our Mountainbikes
 <!-- Back To Top Script-->
 <script src="{% static 'js/back_to_top.js' %}"></script>
 <!-- Products JS -->
+<!-- Filters JS -->
 <script src="{% static 'products/js/filters.js' %}"></script>
+<!-- Add Product to bag JS-->
 {% include 'products/components/add_product_to_bag_script.html' %}
+<!-- Wishlist JS-->
 <script src="{% static 'products/js/add_to_wishlist.js' %}"></script>
 {% endblock %}
