--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -4,7 +4,9 @@
 {% load crispy_forms_tags %}
 {% load account socialaccount %}
 
+{% block title %}
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
+{% endblock %}
 
 {% block inner_content %}
 <h1 class="liner upper">{% trans "Sign In" %}</h1>
