--- a/templates/allauth/account/logout.html
+++ b/templates/allauth/account/logout.html
@@ -2,7 +2,9 @@
 
 {% load i18n %}
 
+{% block title %}
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
+{% endblock %}
 
 {% block inner_content %}
 <h1 class="liner upper">{% trans "Sign Out" %}</h1>
