--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -4,7 +4,9 @@
 {% load account %}
 {% load crispy_forms_tags %}
 
+{% block title %}
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
+{% endblock %}
 
 {% block inner_content %}
 
