--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -3,7 +3,9 @@
 {% load i18n %}
 {% load account %}
 
+{% block title %}
 {% block head_title %}{% trans "Password Reset" %}{% endblock %}
+{% endblock %}
 
 {% block inner_content %}
 <h1 class="liner upper">{% trans "Password Reset" %}</h1>
