--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -2,7 +2,9 @@
 
 {% load i18n %}
 {% load crispy_forms_tags %}
+{% block title %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
+{% endblock %}
 
 {% block inner_content %}
 <h1 class="liner upper">{% if token_fail %}{% trans "Bad Token" %}{% else %}{% trans "Change Password" %}{% endif %}
