--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -1,7 +1,10 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
+
+{% block title %}
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
+{% endblock %}
 
 {% block inner_content %}
 <h1 class="liner upper">{% trans "Change Password" %}</h1>
