--- a/templates/allauth/account/password_set.html
+++ b/templates/allauth/account/password_set.html
@@ -3,7 +3,9 @@
 {% load i18n %}
 {% load crispy_forms_tags %}
 
+{% block title %}
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
+{% endblock %}
 
 {% block inner_content %}
 <h1 class="liner upper">{% trans "Set Password" %}</h1>
