--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -3,7 +3,9 @@
 
 {% load i18n %}
 
+{% block title %}
 {% block head_title %}{% trans "Signup" %}{% endblock %}
+{% endblock %}
 
 {% block inner_content %}
 <h1 class="liner upper">{% trans "Sign Up" %}</h1>
