--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -243,24 +243,7 @@ Your Profile
                 </div>
             </div>
             <!-- Delete Account -->
-            <div id="deleteModal" class="modal" tabindex="-1">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title">Delete Account</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <p>Are you sure you want to delete your account?</p>
-                            <form id="delete-account-form" action="{% url 'delete_account' %}" method="post"
-                                class="d-inline">
-                                {% csrf_token %}
-                                <button type="submit" class="btn btn-cta upper text-white">Delete Account</button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            {% include 'profiles/components/delete_account_modal.html' %}
         </div>
         <!-- Back to Top Button -->
         {% include 'components/back_to_top_button.html' %}
