--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -157,7 +157,8 @@
                         <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
                         {% endif %}
                         <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
-                        <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                        <a data-bs-toggle="modal" href="#signOutModal" aria-label="Logout"
+                            class="dropdown-item">Logout</a>
                         {% else %}
                         <a href="#" id="auth-modal-label" class="login-link dropdown-item" data-bs-toggle="modal"
                             data-bs-target="#auth-modal" data-tab-target="#login">Login</a>
