fix: Validation error facebook pixel. & did not start a character reference. I replaced & with &amp;

--- a/templates/components/scripts.html
+++ b/templates/components/scripts.html
@@ -50,6 +50,6 @@
     fbq('track', 'PageView');
 </script>
 <noscript><img height="1" width="1" style="display:none"
-        src="https://www.facebook.com/tr?id=3480356328904532&ev=PageView&noscript=1"
+        src="https://www.facebook.com/tr?id=3480356328904532&amp;ev=PageView&amp;noscript=1"
         alt="Facebook Tracking Pixel" /></noscript>
 <!-- End Meta Pixel Code -->
